v.0.0.4 | Маркеры и иконки для маршуртов. Зум при переключении маршурта.

--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -1,4 +1,8 @@
 .App {
 	min-height: 100vh;
-	font-family: 'Source Sans Pro', sans-serif;
+}
+
+.leaflet-icon {
+	margin-top: -48px;
+	margin-left: -3px;
 }
